# samp-collection

./: Cargo.toml  README.md
include/: collection.inc  collection_vec.inc
src/: collection.rs  collection.rs.old  idallocator.rs  lib.rs  pawniter.rs  plugin.rs  value.rs
src/collections/: mod.rs  pawnvec.rs
src/natives/: mod.rs  pawnhashmap.rs  pawnvec.rs
