[package]
name = "samp-collection"
version = "0.0.1"
authors = ["Qoo <akck1202@hanmail.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "collection"
crate-type = ["cdylib"]

[dependencies]
samp = { git = "https://github.com/ZOTTCE/samp-rs" }
log = "0.4.8"
fern = "0.5.9"
